[FIX] sap.f.CalendarInCard: control adjusted on small screen widths (phone)
* there were some cuttings in calendar card navigation buttons, Month Picker
and Year Picker.

* now they are fixed for small screen widths (up to 600px)

BCP: 2170266514

--- a/src/sap.ui.integration/src/sap/ui/integration/themes/base/CalendarContent.less
+++ b/src/sap.ui.integration/src/sap/ui/integration/themes/base/CalendarContent.less
@@ -216,3 +216,17 @@
 		}
 	}
 }
+
+// adjust calendar card on small screen sizes (phone)
+html.sapUiMedia-Std-Phone .sapFCardCalendarContent .sapFCalCard,
+html.sapUiMedia-StdExt-Phone .sapFCardCalendarContent .sapFCalCard {
+	padding: 1rem 0.375rem;
+	.sapMIBar.sapMTB .sapMBarChild ~ .sapMBarChild {
+		margin-left: 0;
+	}
+	.sapUiCalMonthPicker,
+	.sapUiCalYearPicker {
+		width: auto;
+	}
+}
+
